syntax = "proto3";
package tools.storyteller;

option java_package = "tools.storyteller";
option java_outer_classname = "Protos";

message Story {
  string id = 1;
  int64 started_ms = 2;
  string oneliner = 3;
  string project_id = 4;
  bool is_shared = 5;
  string author = 6;
}

message Track {
  string id = 1;
  int64 started_ms = 2;
  int64 ended_ms = 3;
  string story_id = 4;
}

message Moment {
  string id = 1;
  string note = 2;
  int64 timestamp_ms = 3;
  string screenshot = 4;
  string story_id = 5;
}
